--- a/contact.html
+++ b/contact.html
@@ -2,49 +2,90 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Contact form</title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+	<title>Portfolio</title>
+<!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-<header>
-	<h1>Abhijit Ghosh</h1>
-		<nav>
-			<a href="index.html">About</a> |
-			<a href="portfolio.html">Portfolio</a> |
-			<a href="contact.html">Contact</a>
-			
-		</nav>
-	</header>
-<div class="clearfix"><!-- div for middle portion-->
-	<section>
-		<h2 id="h2midsection">Contact</h2>
-		<form>
-			Name:<br><br>
-  			<input type="text" name="firstname" class="inputclass" value="John smith"><br><br>			
-  			Email:<br><br>
- 			 <input type="text" name="Email" class="inputclass" value="example@gmail.com"><br><br>
- 			 Message:<br><br>
- 			 <textarea rows="20" cols="30" class="inputclass"></textarea><br>
- 			 <button>Submit</button>
-		</form>
+<nav class="navbar navbar-default">
+			<div class="container">
+			<div class="row">
+				<div class="navbar-header">
+  					<a class="navbar-brand col-xs-12 header" style="background-color:teal; color:white">Abhijit Ghosh</a>
+  					</div>
+  			<div class="row">
+			<ul class="nav navbar-nav navbar-right">
+			<div class="col-xs-4"><li><a href="index.html">About</a></li>
+			</div>
+			<div class="col-xs-4">
+			<li><a href="portfolio.html">Portfolio</a></li>
+			</div>
+			<div class="col-xs-4">
+			<li><a href="contact.html">Contact</a></li>
+			</div>
+			</ul>
+		</div>
+			</div>
+			</div>
+			</nav>
+<div class="container">			
+<div class="row">
+	<div class="col-xs-12 col-sm-6 col-md-8 panel panel-default">
+		<H3 class="page-header">About Me</H3>
+		<div class="form">
+			<div class="form-group">
+				<label for="Name">Name</label>
+  			<input type="text" name="firstname" class="form-control" value="John smith">			</div>
+  			<div class="form-group">
+  			<label for="Email">Email</label>
+ 			 <input type="text" name="Email" class="form-control" value="example@gmail.com">
+ 			 </div>
+ 			 <div class="form-group">
+ 			 <label for="Message">Message</label>
+ 			 <textarea rows="20" cols="30" class="form-control"></textarea><br>
+ 			 <button class="btn-btn-primary">Submit</button>
+ 			 </div>
+ 			 </div>
+
 
 		
-	</section><!--div for contact form-->
-	<aside><!--section for connect me-->
-	<h2 id="h2aside">Connect with me</h2>
-	<div id="connectlinks">
-	<a href="https://github.com/abhijit2908">
-	<img src="./assets/images/github.png" width="50" alt="Abhijit's Github Link" class="linkimage"></a>
-	<a href="https://www.linkedin.com/in/abhijit-ghosh-pmp-60a56834/">
-	<img src="./assets/images/linkedin.png" width="50" alt="Abhijit Linkedin Link" class="linkimage"></a>
-	<a href="https://stackoverflow.com/users/8497661/abhijit2908">
-	<img src="./assets/images/stackoverflow.png" width="50" alt="Abhijit StackOverflow Link" class="linkimage"></a>
 	</div>
-</aside>
+	<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="panel panel-default">
+  			<div class="panel-heading">
+  			<div class="h3">
+  			Connect with me</div>
+  				
+  			</div>
+  				<div class="panel-body">
+  				<div class="row">
+  				<div class="col-xs-4 col-sm-4">
+  				<a href="https://github.com/abhijit2908">
+	<img src="./assets/images/github.png" width="50" alt="Abhijit's Github Link" ></a>
+	</div>
+	<div class="col-xs-4 col-sm-4">
+	<a href="https://www.linkedin.com/in/abhijit-ghosh-pmp-60a56834/">
+	<img src="./assets/images/linkedin.png" width="50" alt="Abhijit Linkedin Link"></a></div>
+	<div class="col-xs-4 col-sm-4">
+	<a href="https://stackoverflow.com/users/8497661/abhijit2908">
+	<img src="./assets/images/stackoverflow.png" width="50" alt="Abhijit StackOverflow Link"></a></div>
+	</div>
+	</div>
+	</div>
+	</div>
+
+	</div>
 		
-</div>
-<footer> ©copyright Abhijit Ghosh</footer>
+	</div>
+	</div>
+ 
+<!--<footer class="navbar navbar-default navbar-fixed-bottom" style="background-color:teal">-->
+ <div class="container-fluid text-center navbar navbar-default" style="background-color:grey">
+    <span>©copyright Abhijit Ghosh</span>
+    </div>
+      <!--</footer>-->
+
 	
 </body>
 </html>
