--- a/portfolio.html
+++ b/portfolio.html
@@ -3,53 +3,92 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+<!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-<header>
-	<h1>Abhijit Ghosh</h1>
-		<nav>
-			<a href="index.html">About</a> |
-			<a href="portfolio.html">Portfolio</a> |
-			<a href="contact.html">Contact</a>
-			
-		</nav>
-	</header>
-<div class="clearfix"><!-- div for middle portion-->
-	<section>
-		<h2 id="h2midsection">Portfolio</h2>
-		<div class="imagecontainer">
-		<img src="./assets/images/Ipad.jpg" alt="Abhijit's Github Link" class="image">
-		<h3 class="imagetxt">Hangman</h3>
+<nav class="navbar navbar-default">
+			<div class="container">
+			<div class="row">
+				<div class="navbar-header">
+  					<a class="navbar-brand col-xs-12 header" style="background-color:teal;color:white">Abhijit Ghosh</a>
+  					</div>
+  			<div class="row">
+			<ul class="nav navbar-nav navbar-right">
+			<div class="col-xs-4"><li><a href="index.html">About</a></li>
+			</div>
+			<div class="col-xs-4">
+			<li><a href="portfolio.html">Portfolio</a></li>
+			</div>
+			<div class="col-xs-4">
+			<li><a href="contact.html">Contact</a></li>
+			</div>
+			</ul>
 		</div>
-		<div class="imagecontainer"><img src="./assets/images/soundsys.jpg" alt="Abhijit's Github Link" class="image">
-		<h3 class="imagetxt">Hangman</h3>
+			</div>
+			</div>
+			</nav>
+<div class="container">			
+<div class="row">
+	<div class="col-md-8 col-xs-12 col-sm-12 panel panel-default panel-body midsection">
+		<H3 class="page-header">Portfolio</H3>
+		<div class="row">
+		<div class="col-md-4 col-sm-6 col-xs-12 Imagecontainer">
+		<img src="./assets/images/Ipad.jpg" alt="Abhijit's Github Link" height="200" width="200" class=" img-thumbnail img-responsive Image">
+		<h3 class="imagetext">Hangman</h3>
 		</div>
-		<div class="imagecontainer"><img src="./assets/images/phone.jpg" alt="Abhijit's Github Link" class="image">
-		<h3 class="imagetxt">Hangman</h3>
+		<div class="col-md-4 col-sm-6 col-xs-12 Imagecontainer"><img src="./assets/images/soundsys.jpg" height="200" width="200" alt="Abhijit's Github Link" class=" img-thumbnail img-responsive Image">
+		<h3 class="imagetext">Hangman</h3>
 		</div>
-		<div class="imagecontainer"><img src="./assets/images/LEDTV.jpg"  alt="Abhijit's Github Link" class="image">
-		<h3 class="imagetxt">Hangman</h3>
-		</div>
-		<div class="imagecontainer"><img src="./assets/images/headphone.jpg"  alt="Abhijit's Github Link" class="image">
-		<h3 class="imagetxt">Hangman</h3>
-		</div>
-	</section><!--div for contact form-->
-	<aside><!--section for connect me-->
-	<h2 id="h2aside">Connect with me</h2>
-	<div id="connectlinks">
-	<a href="https://github.com/abhijit2908">
-	<img src="./assets/images/github.png" width="50" alt="Abhijit's Github Link" class="linkimage"></a>
-	<a href="https://www.linkedin.com/in/abhijit-ghosh-pmp-60a56834/">
-	<img src="./assets/images/linkedin.png" width="50" alt="Abhijit Linkedin Link" class="linkimage"></a>
-	<a href="https://stackoverflow.com/users/8497661/abhijit2908">
-	<img src="./assets/images/stackoverflow.png" width="50" alt="Abhijit StackOverflow Link" class="linkimage"></a>
-	</div>
-</aside>
 		
-</div>
-<footer> ©copyright Abhijit Ghosh</footer>
+		<div class="col-md-4 col-sm-6 col-xs-12 Imagecontainer"><img src="./assets/images/phone.jpg" alt="Abhijit's Github Link" height="200" width="200" class="img-responsive img-thumbnail Image">
+		<h3 class="imagetext">Hangman</h3>
+		</div>
+		<div class="col-md-4 col-sm-6 col-xs-12 Imagecontainer"><img src="./assets/images/LEDTV.jpg" height="200" width="200" alt="Abhijit's Github Link" class="img-thumbnail img-responsive Image">
+		<h3 class="imagetext">Hangman</h3>
+		</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 Imagecontainer"><img src="./assets/images/headphone.jpg"  alt="Abhijit's Github Link" alt="Abhijit's Github Link" height="200" width="200" class="img-thumbnail img-responsive Image">
+		<h3 class="imagetext">Hangman</h3>
+		</div>
+		</div>
+	</div>
+
+	<div class="col-md-4 col-xs-12 col-sm-12 midsection aside">
+			<div class="panel panel-default">
+  			<div class="panel-heading">
+  			<div class="h3">
+  			Connect with me</div>
+  				
+  			</div>
+  				<div class="panel-body">
+  				<div class="row">
+  				<div class="col-xs-4 col-sm-4">
+  				<a href="https://github.com/abhijit2908">
+	<img src="./assets/images/github.png" width="50" alt="Abhijit's Github Link" ></a>
+	</div>
+	<div class="col-xs-4 col-sm-4">
+	<a href="https://www.linkedin.com/in/abhijit-ghosh-pmp-60a56834/">
+	<img src="./assets/images/linkedin.png" width="50" alt="Abhijit Linkedin Link"></a></div>
+	<div class="col-xs-4 col-sm-4">
+	<a href="https://stackoverflow.com/users/8497661/abhijit2908">
+	<img src="./assets/images/stackoverflow.png" width="50" alt="Abhijit StackOverflow Link"></a></div>
+	</div>
+	</div>
+	</div>
+	</div>
+
+	</div>
+		
+	</div>
+	</div>
+ 
+<!--<footer class="navbar navbar-default navbar-fixed-bottom" style="background-color:teal">-->
+ <div class="container-fluid text-center navbar navbar-default" style="background-color:grey">
+    <span>©copyright Abhijit Ghosh</span>
+    </div>
+      <!--</footer>-->
+
 	
 </body>
 </html>
