submission bootstrap portfolio

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 			</nav>
 <div class="container">			
 <div class="row">
-	<div class="col-xs-12 col-sm-6 col-md-8 panel panel-default">
+	<div class="col-xs-12 col-sm-12 col-md-8 panel panel-default midsection">
 		<H3 class="page-header">About Me</H3>
-		<div class="col-md-3 col-xs-12">
-				<img src="./assets/images/biopic2.jpg" alt="Abhijit's Photo" alt="Abhijit Photo" class="img-thumbnail pull-left">	
+		<div class="col-md-3 col-sm-12 col-xs-12">
+				<img src="./assets/images/bio pic.jpg" alt="Abhijit's Photo" alt="Abhijit Photo" class="img-thumbnail img-responsive pull-left">	
 			</div>
 				<p>Hi! I am Abhijit Ghosh.I am an IT professional with about 7 years experience in the field of Quality assurance. I have earned a Bachelors degres in Engineering from India and a Masters degree from The George washington university in Washington DC.I have earned experience primarily in the Finance and banking sector.I have worked in both Big and Small Setups.I have experience in many areas of Finance such as Primary and secondary Mortgage market,Mortgage Origination, Financial Planning and Fixed income trading.I am comfortable in both SDLC and Agile methodologies.I have also earnd a PMP Certification.
 I have had experience in leading QA teams onshore as well as offshore.I have handled multiple QA teams on some occassions and handled multiple projects for the same.I can work as a leader as well as team member. I can step up when required and be team player when required.I am a quick learner a adapt very quickly with any new technology or methodology.
@@ -42,7 +42,7 @@ Outside of work, I enjoy outdoors and playing sports. I am Football enthusiast a
 				</p>
 
 	</div>
-	<div class="col-xs-12 col-sm-6 col-md-4">
+	<div class="col-xs-12 col-sm-12 col-md-4 midsection">
 			<div class="panel panel-default">
   			<div class="panel-heading">
   			<div class="h3">
