--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 			</nav>
 <div class="container">			
 <div class="row">
-	<div class="col-xs-12 col-sm-6 col-md-8 panel panel-default">
+	<div class="col-xs-12 col-sm-6 col-md-8 panel panel-default midsection">
 		<H3 class="page-header">About Me</H3>
 		<div class="form">
 			<div class="form-group">
@@ -51,7 +51,7 @@
 
 		
 	</div>
-	<div class="col-xs-12 col-sm-6 col-md-4">
+	<div class="col-xs-12 col-sm-6 col-md-4 midsection">
 			<div class="panel panel-default">
   			<div class="panel-heading">
   			<div class="h3">
