--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 
-	<div class="col-md-4 col-xs-12 col-sm-12 midsection aside">
+	<div class="col-md-4 col-xs-12 col-sm-12 midsection">
 			<div class="panel panel-default">
   			<div class="panel-heading">
   			<div class="h3">
